# simple-pascal-interpreter

./: .gitignore  CurrentDirModule.pas  INTEGRATION_TESTS_SUMMARY.md  MODULE_SYSTEM_README.md  Makefile  demo_enhanced_errors.py  demo_type_resolver.py  demo_unresolved_type_integration.py  gen_ast_dot.py  integration_test.py  main.py  mypy.ini  pascal.md  project.md  pyproject.toml  readme.md  record.md  ruff.toml  sample.pas  spi.py  test_advanced_end_to_end_integration.py  test_array_unresolved_type_integration.py  test_arrayutils_unit.py  test_comprehensive_end_to_end_integration.py  test_dependency_integration.py  test_dependency_resolution.py  test_end_to_end_module_integration.py  test_error_repr.py  test_interpreter.py  test_interpreter_module_integration.py  test_interpreter_type_resolution_setup.py  test_map_unit.py  test_math_unit.py  test_module_errors.py  test_module_type_resolution.py  test_parser_type_resolution_integration.py  test_parser_type_spec_refactor.py  test_pascal_examples.py  test_pascal_examples_by_spi.py  test_real_world_module_scenarios.py  (+6 more)
docs/: module-system.md  troubleshooting.md
misc/: class-json.pas  record-json.pas
pas/: boolean.pas  class.pas  const.pas  fibonacci.pas  fibonacci_pascal.pas  function.pas  json.pas  output_in_func.pas  pascal_json_parser.pas  procedure.pas
plan/: performance.md
scripts/: auto_type.py  gen_ast_dot.py
src/: error.py  globals.py  interpreter.py  lexer.py  module.py  object.py  parser.py  sematic_analyzer.py  spi_ast.py  spi_token.py  symbol.py  type_resolver.py  util.py  visibility.py  visitor.py
(+158 files in other folders)
