[project]
name = "spi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spi"]

[tool.hatch.build.targets.wheel.shared-data]
"src/spi/py.typed" = "spi/py.typed"
